- [skip-ci] This is a WIP commit, won't compile. - Deleted parts of the template webpage as it's not all required anymore. - In doc builder, no longer building pages for commands that are not public.